--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -30,12 +30,12 @@
   color: #9e9b9d;
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
-  font-size: 1rem;
+  font-size: 0.9rem;
   padding-left: 30px;
   cursor: pointer;
-  -webkit-transition: all 0.3s ease-in-out 0s;
-  -moz-transition: all 0.3s ease-in-out 0s;
-  transition: all 0.3s ease-in-out 0s;
+  -webkit-transition: all 0.5s ease-in-out 0s;
+  -moz-transition: all 0.5s ease-in-out 0s;
+  transition: all 0.5s ease-in-out 0s;
 }
 .nav-item:hover {
   color: #ffffff;
@@ -45,4 +45,7 @@
   height: auto;
   border-radius: 10px;
   pointer-events: none;
+  -webkit-box-shadow: 0px 3px 10px 5px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 3px 10px 5px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 3px 10px 5px rgba(0, 0, 0, 0.15);
 }
