--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -1,6 +1,8 @@
 .item-container {
   position: relative;
   width: 28vw;
+  cursor: pointer;
+  margin-bottom: 3vw;
 }
 
 .item-container img {
@@ -9,9 +11,9 @@
   border-radius: 10px;
   pointer-events: none;
   margin-bottom: 0.5rem;
-  -webkit-box-shadow: 0px 3px 15px 5px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0px 3px 15px 5px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 3px 15px 5px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 3px 15px 5px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 3px 15px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 3px 15px 5px rgba(0, 0, 0, 0.3);
 }
 
 .item-container span {
