--- a/src/components/Section.css
+++ b/src/components/Section.css
@@ -14,3 +14,11 @@
   font-size: 1.1vw;
   padding-bottom: 0.8vw;
 }
+.projects-container {
+  display: flex;
+  flex-direction: column;
+}
+.projects-row {
+  display: flex;
+  justify-content: space-between;
+}
