--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -7,7 +7,7 @@
   width: 100%;
   height: 80px;
   display: flex;
-  flex-direction: row;
+  flex-flow: row;
   justify-content: space-between;
 }
 .logo-container img {
