--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -4,23 +4,34 @@
   cursor: pointer;
   margin-bottom: 3vw;
 }
-
 .item-container img {
+  display: block;
   width: 100%;
   height: auto;
   border-radius: 10px;
-  pointer-events: none;
   margin-bottom: 0.5rem;
+  overflow: hidden;
   -webkit-box-shadow: 0px 3px 15px 5px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0px 3px 15px 5px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 3px 15px 5px rgba(0, 0, 0, 0.3);
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition: 0.5s ease-in-out;
+  -moz-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
 }
-
+.item-container img:hover {
+  -webkit-transform: scale(1.07);
+  -moz-transform: scale(1.07);
+  -ms-transform: scale(1.07);
+  transform: scale(1.07);
+}
 .item-container span {
   display: block;
   text-align: left;
 }
-
 .item-client {
   color: #75777c;
   font-family: 'Montserrat', sans-serif;
@@ -28,7 +39,6 @@
   font-size: 0.9vw;
   padding-bottom: 0.1vw;
 }
-
 .item-project {
   color: #ffffff;
   font-family: 'Montserrat', sans-serif;
