--- a/src/components/Section.css
+++ b/src/components/Section.css
@@ -4,7 +4,7 @@
   width: 93%;
   margin: 0 auto;
   display: flex;
-  flex-direction: column;
+  flex-flow: column;
 }
 .section-title {
   display: flex;
@@ -16,7 +16,7 @@
 }
 .projects-container {
   display: flex;
-  flex-direction: column;
+  flex-flow: column;
 }
 .projects-row {
   display: flex;
