--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -8,6 +8,7 @@
   height: auto;
   border-radius: 10px;
   pointer-events: none;
+  margin-bottom: 3vw;
   -webkit-box-shadow: 0px 3px 10px 5px rgba(0, 0, 0, 0.15);
   -moz-box-shadow: 0px 3px 10px 5px rgba(0, 0, 0, 0.15);
   box-shadow: 0px 3px 10px 5px rgba(0, 0, 0, 0.15);
