--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -2,7 +2,8 @@
   position: relative;
   width: 28vw;
   cursor: pointer;
-  margin-bottom: 3vw;
+  opacity: 0;
+  margin-bottom: 2vw;
 }
 .item-container img {
   display: block;
