--- a/src/routes/Project.css
+++ b/src/routes/Project.css
@@ -1,8 +1,8 @@
 video {
   opacity: 0;
   border: 0;
-  max-width: 100%;
-  height: auto;
+  width: 1024px;
+  height: 576px;
   border-radius: 10px;
   margin-left: auto;
   margin-right: auto;
@@ -94,5 +94,9 @@ video {
   }
   .arrow-right {
     display: none;
+  }
+  video {
+    max-width: 100%;
+    height: auto;
   }
 }
